# qahwa

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
includes/: CMakeLists.txt
sample/: CMakeLists.txt  Sample.cpp  Sample.hpp  sample.inp  sample.psf  sample.sh
src/: CMakeLists.txt  CmdParser.hpp  Definitions.hpp  Histogram.hpp  HistogramMaker.cpp  HistogramMaker.hpp  ProbabilityDensityFunction.cpp  ProbabilityDensityFunction.hpp  Qahwa.cpp  UnbiasSolver.cpp  UnbiasSolver.hpp  UserDefinedFunctions.cpp  UserDefinedFunctions.hpp  WhamSolver.cpp  WhamSolver.hpp
